# cross-device-share

./: .gitignore  README.md  flake.nix  pyproject.toml  shell.nix
.github/workflows/: pipeline.yml
migrations/versions/: 8b98b63bddf0_create_elements_table.py  c6319a69348b_create_user_table.py
test/database/: test_database.py
